src/test/dev-workspace/src/main/java/net/labymod/core/laby3d/opengl/error/generated/NVFence_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/NVFence_StringErrorContext.class */
public final class NVFence_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("nglDeleteFencesNV(IJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVFenceErrorContext");
        methods.put("glDeleteFencesNV(Ljava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVFenceErrorContext");
        methods.put("glDeleteFencesNV(I)V", "net/labymod/core/laby3d/opengl/error/generated/NVFenceErrorContext");
        methods.put("nglGenFencesNV(IJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVFenceErrorContext");
        methods.put("glGenFencesNV(Ljava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVFenceErrorContext");
        methods.put("glGenFencesNV()I", "net/labymod/core/laby3d/opengl/error/generated/NVFenceErrorContext");
        methods.put("glIsFenceNV(I)Z", "net/labymod/core/laby3d/opengl/error/generated/NVFenceErrorContext");
        methods.put("glTestFenceNV(I)Z", "net/labymod/core/laby3d/opengl/error/generated/NVFenceErrorContext");
        methods.put("nglGetFenceivNV(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/NVFenceErrorContext");
        methods.put("glGetFenceivNV(IILjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/NVFenceErrorContext");
        methods.put("glGetFenceiNV(II)I", "net/labymod/core/laby3d/opengl/error/generated/NVFenceErrorContext");
        methods.put("glFinishFenceNV(I)V", "net/labymod/core/laby3d/opengl/error/generated/NVFenceErrorContext");
        methods.put("glSetFenceNV(II)V", "net/labymod/core/laby3d/opengl/error/generated/NVFenceErrorContext");
        methods.put("glDeleteFencesNV([I)V", "net/labymod/core/laby3d/opengl/error/generated/NVFenceErrorContext");
        methods.put("glGenFencesNV([I)V", "net/labymod/core/laby3d/opengl/error/generated/NVFenceErrorContext");
        methods.put("glGetFenceivNV(II[I)V", "net/labymod/core/laby3d/opengl/error/generated/NVFenceErrorContext");
        return methods;
    }
}
